[package]
name = "excom_proto2"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

[dependencies]
tokio = "0.1"
serde = "1"
serde_derive = "1"
error-chain = "0.12"
log = "0.4"
futures = "0.1.25"
# We have to use these for TLS.  I wish we didn't, but here we are.
native-tls = "0.2"
tokio-tls = "0.2"
